@@ -1,3 +1,9 @@
+2010-05-25  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/support.c: Fix stupid mistake - trying to access message from
+	null error object. Remove the corresponding variable as it is never
+	initialized. Fixes LP: #579319.
+
 2010-05-23  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* po/it.po: Updated Italian translation from launchpad.
